--- a/style.css
+++ b/style.css
@@ -10,4 +10,8 @@ div {
 	color: #fff;
 	padding: 100px;
 	margin-top: 1px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+	border-top-right-radius: 10px;
+	box-shadow: 4px 4px 4px orangered;
 }
