--- a/style.css
+++ b/style.css
@@ -2,16 +2,22 @@
 		background: url(../images/pepper.jpg);
 		color: black;
 		font-family: arial, sans-serif;
-		font-size: 30px;
+		font-size: 20px;
 	}
 
 	div {
 		background: #898989;
 		color: #fff;
-		padding: 100px;
+		padding: 150px;
 		margin-top: 5px;
 		border-bottom-left-radius: 10px;
 		border-bottom-right-radius: 10px;
 		border-top-right-radius: 10px;
 		box-shadow: 4px 4px 4px orangered;
+	}
+
+	select {
+		color: red;
+		background-color: #330000;
+		font-size: 20px;
 	}
