--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 	div {
 		background: #898989;
-		color: #fff;
+		opacity: 0.8;
 		padding: 150px;
 		margin-top: 5px;
 		border-bottom-left-radius: 10px;
