--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@
 	}
 
 	select {
-		color: red;
+		color: green;
 		background-color: #330000;
 		font-size: 20px;
+	}
+
+	select:hover {
+		text-decoration: none;
+		color: red;
 	}
